# MSCL

./: README.md  pyproject.toml
configs/: activitynet_c3d_glove.yaml  charades_i3d_glove.yaml  dummy.yaml  ego4d_egovlp.yaml  ego4d_slowfast_bert.yaml  mad_clip.yaml  tacos_c3d_glove.yaml
scripts/: download_datasets.py  evaluate.py  prepare_annotations.py  prepare_features.py  train.py
src/mscl_vtg/: __init__.py  config.py
src/mscl_vtg/data/: __init__.py  activitynet.py  base.py  charades.py  collate.py  dummy.py  ego4d.py  mad.py  sampling.py  tacos.py
src/mscl_vtg/engine/: evaluator.py  trainer.py
src/mscl_vtg/losses/: __init__.py  contrastive.py  diou.py  focal.py
src/mscl_vtg/models/: __init__.py  fusion.py  heads.py  model.py  text_encoder.py  video_encoder.py
src/mscl_vtg/utils/: __init__.py  box_ops.py  checkpoint.py  logging.py  metrics.py  seed.py  soft_nms.py
tests/: test_dataloader_dummy.py  test_losses.py  test_shapes.py  test_soft_nms.py
